<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/preferences"
	android:key="preferences">
	<PreferenceCategory
		android:title="@string/recognition"
		android:key="recognition_preferences">
		<CheckBoxPreference
			android:key="use_media_button"
			android:title="@string/use_media_button"
			android:summary="@string/use_media_button_summary"
			android:checked="true"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:key="haptic_feedback"
			android:title="@string/haptic_feedback"
			android:summary="@string/haptic_feedback_summary"
			android:checked="true"
			android:defaultValue="true"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/display"
		android:key="display_preferences">
		<ListPreference
			android:key="score"
			android:title="@string/score"
			android:summary="@string/score_summary"
			android:entries="@array/score_names"
			android:entryValues="@array/score_values"
			android:defaultValue="1"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/tracking"
		android:key="tracking_preferences">
		<EditTextPreference
			android:key="seconds_between_updates"
			android:title="@string/seconds_between_updates"
			android:summary="@string/seconds_between_updates_summary"
			android:inputType="number"
			android:defaultValue="30"/>
		<EditTextPreference
			android:key="meters_between_updates"
			android:title="@string/meters_between_updates"
			android:summary="@string/meters_between_updates_summary"
			android:inputType="number"
			android:defaultValue="20"/>
		<EditTextPreference
			android:key="minimum_accuracy"
			android:title="@string/minimum_accuracy"
			android:summary="@string/minimum_accuracy_summary"
			android:inputType="number"
			android:defaultValue="100"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/import_export">
		<Preference
				android:key="export_db"
				android:title="@string/export_db"
				android:summary="@string/export_db_summary"/>
		<Preference
				android:key="import_db"
				android:title="@string/import_db"
				android:summary="@string/import_db_summary"/>
	</PreferenceCategory>
</PreferenceScreen>
